# chalkydri

./: .gitignore  Cargo.toml  Makefile  README.md  build.gradle  cbindgen.toml  chalkydri.toml  gradlew  wpilib_preferences.json
scripts/: genClangdConfig.sh
src/cpp/: Constants.hpp  Robot.cpp  Robot.hpp  RobotContainer.cpp  RobotContainer.hpp  main.cpp
src/cpp/commands/: Autos.cpp  Autos.hpp  ExampleCommand.cpp  ExampleCommand.hpp
src/cpp/subsystems/: ExampleSubsystem.cpp  Swerve.cpp  Swerve.hpp
src/rs/: config.rs  lib.rs
vendordeps/: WPILibNewCommands.json
