[package]
name = "chalkydri"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "./src/rs/lib.rs"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
toml = { version = "0.7.6", features = ["parse"], default-features = false }

[profile.dev.package.'*']
opt-level = 3
[profile.dev.package.chalkydri]
opt-level = 1

[profile.release]
opt-level = 1
lto = true
strip = true

